[package]
name = "v2ex-sign-in"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
config = "0.15"
regex = "1.10"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport", "pool"] }